add structure of project

--- a/source/styles/main.scss
+++ b/source/styles/main.scss
@@ -11,4 +11,7 @@
 @import "global/icons";
 @import "global/button";
 
-@import "sections/test";
+@import "sections/header";
+@import "sections/content";
+@import "sections/subcribe";
+
