--- a/source/template/index.pug
+++ b/source/template/index.pug
@@ -5,9 +5,11 @@ html(lang='ru')
     meta(http-equiv='X-UA-Compatible', content="IE=edge")
     meta(name='viewport' content='width=device-width')
     link(rel="stylesheet" href="css/main.min.css")
-    title Blank
+    title Kelnik
   body
-    include sections/test
+    include sections/header
+    include sections/content
+    include sections/subscribe
  
 
     script(src="js/main.min.js")
