--- a/source/styles/main.scss
+++ b/source/styles/main.scss
@@ -12,6 +12,9 @@
 @import "global/button";
 
 @import "sections/header";
+@import "sections/logo";
+@import "sections/nav";
+@import "sections/contacts";
 @import "sections/content";
-@import "sections/subcribe";
+@import "sections/subscribe";
 
