--- a/source/template/sections/header.pug
+++ b/source/template/sections/header.pug
@@ -1,2 +1,6 @@
-.test
-    h1 Хелло, ворлд!
+header.header
+    .header__inner
+        a(href="#").logo
+            img(src="./images/logo.svg", alt="logo").logo__image
+        include nav
+        include contacts
