--- a/source/styles/global/vars.scss
+++ b/source/styles/global/vars.scss
@@ -3,3 +3,5 @@
 // $ff-main-bold: 'helvetica-neue-bold';
 // $ff-main-light: 'helvetica-neue-light';
 // $ff-steps: 'georgia-bold';
+
+$color-main: #002f2f;
