--- a/source/template/sections/content.pug
+++ b/source/template/sections/content.pug
@@ -11,7 +11,7 @@ section.content
                         button(class="sorter__button" data-sort="price")
                             span.sorter__title Цене
                             span.sorter__icon
-                                img.sorter__icon--arrow(src="./images/sort-arrow.svg", alt="sort-arrow")
+                                img.sorter__icon-arrow(src="./images/sort-arrow.svg", alt="sort-arrow")
                     li.sorter__item
                         button(class="sorter__button" data-sort="rooms")
                             span.sorter__title Комнатам
