--- a/source/styles/global/common.scss
+++ b/source/styles/global/common.scss
@@ -1,7 +1,17 @@
 .container {
-    max-width: 1024px;
-    margin: auto;
+  width: 100%;
+  max-width: 1280px;
+  margin-right: auto;
+  margin-left: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+  overflow: hidden;
+
+  @media only screen and (min-width: 1200px) {
+    padding-left: 105px;
+    padding-right: 105px;
   }
+}
 
   .is-hidden {
     display: none !important;
