add subscribe section

--- a/source/styles/main.scss
+++ b/source/styles/main.scss
@@ -10,6 +10,7 @@
 @import "global/sprite";
 @import "global/icons";
 @import "global/button";
+@import "global/forms";
 
 @import "sections/header";
 @import "sections/logo";
