--- a/source/styles/global/common.scss
+++ b/source/styles/global/common.scss
@@ -13,11 +13,18 @@
   }
 }
 
-  .is-hidden {
-    display: none !important;
-  }
+.is-hidden {
+  position: absolute;
+  height: 1px;
+  width: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+  clip: rect(1px, 1px, 1px, 1px);
+  border: 0;
+}
 
-  .visually-hidden {
-    text-indent: -9999px;
-    font-size: 0;
-  }
+.visually-hidden {
+  text-indent: -9999px;
+  font-size: 0;
+}
