add backToTop button

--- a/source/template/index.pug
+++ b/source/template/index.pug
@@ -10,6 +10,7 @@ html(lang='ru')
     include sections/header
     include sections/content
     include sections/subscribe
+    .backtotop
  
 
     script(src="js/main.min.js")
