--- a/source/styles/sections/subscribe.scss
+++ b/source/styles/sections/subscribe.scss
@@ -45,9 +45,11 @@
     justify-content: center;
     width: 100%;
 
+
     @media only screen and (min-width: 992px) {
       justify-content: flex-start;
       width: initial;
+      padding-top: 11px;
     }
 
     @media only screen and (min-width: 1200px) {
@@ -68,6 +70,7 @@
     }
 
     @media only screen and (min-width: 1200px) {
+      padding-left: 15px;
       padding: 0 29px;
     }
   }
@@ -88,7 +91,7 @@
 
   &__email {
     width: 100%;
-    margin-bottom: 12px;
+    margin-bottom: 7px;
   }
 
   &__checkbox {
