--- a/source/styles/global/button.scss
+++ b/source/styles/global/button.scss
@@ -15,11 +15,12 @@
     position: absolute;
     top: 20px;
     right: 17px;
-    height: 18px;
-    width: 19px;
+    height: 22px;
+    width: 23px;
     padding: 0;
     border: none;
     background-color: transparent;
+    outline: none;
 
     &:hover {
       .button-favorite--star {
