--- a/source/styles/main.scss
+++ b/source/styles/main.scss
@@ -16,6 +16,7 @@
 @import "sections/logo";
 @import "sections/nav";
 @import "sections/contacts";
+@import "sections/toggleMenu";
 @import "sections/content";
 @import "sections/subscribe";
 @import "sections/backtotop";
