--- a/source/template/sections/header.pug
+++ b/source/template/sections/header.pug
@@ -4,3 +4,4 @@ header.header
             img(src="./images/logo.svg", alt="logo").logo__image
         include nav
         include contacts
+        include toggleMenu
