--- a/source/styles/sections/backtotop.scss
+++ b/source/styles/sections/backtotop.scss
@@ -15,6 +15,10 @@
     height: 80px;
   }
 
+  @media only screen and (max-width: 1199px) {
+    bottom: 20px;
+  }
+
   &--visible {
     opacity: 1;
     z-index: 1;
