--- a/source/styles/sections/subscribe.scss
+++ b/source/styles/sections/subscribe.scss
@@ -45,7 +45,6 @@
     justify-content: center;
     width: 100%;
 
-
     @media only screen and (min-width: 992px) {
       justify-content: flex-start;
       width: initial;
@@ -72,6 +71,12 @@
     @media only screen and (min-width: 1200px) {
       padding-left: 15px;
       padding: 0 29px;
+    }
+  }
+
+  &__button-wrap {
+    @media only screen and (max-width: 590px) {
+      padding-top: 20px;
     }
   }
 
